--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -1,3 +1,4 @@
+//npm i react-icons
 .header {
 	width: 100%;
 	padding: 50px 15vw;
@@ -12,11 +13,21 @@
 		letter-spacing: 1px;
 	}
 	nav {
-		ul {
+		display: flex;
+		align-items: center;
+		gap: 100px;
+
+		.gnb {
 			display: flex;
 			gap: 60px;
 			font: 600 0.8rem/1 'orbitron';
 			color: #555;
+		}
+		.sns {
+			display: flex;
+			font-size: 1rem;
+			color: #888;
+			gap: 20px;
 		}
 	}
 }
