서브 페이지 컴포넌트 생성 및 공통의 스타일 연결

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import './common/reset';
 @import './common/header';
 @import './common/footer';
+@import './common/layout';
 
 //main
 @import './main/home';
