--- a/src/styles/sub/_members.scss
+++ b/src/styles/sub/_members.scss
@@ -30,13 +30,13 @@
 		.pic {
 			width: 50%;
 			height: 65vh;
-			overflow: hidden;
+			// overflow: hidden;
 
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
+			// img {
+			// 	width: 100%;
+			// 	height: 100%;
+			// 	object-fit: cover;
+			// }
 		}
 	}
 
