Pic 컴포넌트 이미지 효율적으로 출력

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@ $mobile: 599px;
 @import './main/home';
 
 //sub
+@import './sub/gallery';
 @import './sub/members';
 @import './sub/youtube';
 @import './sub/youtubeDetail';
