목록 클릭시 모달창에 큰 이미지 출력_두번째 주석 gpt코드

--- a/src/styles/common/_modal.scss
+++ b/src/styles/common/_modal.scss
@@ -13,10 +13,16 @@
 		width: 100%;
 		height: 100%;
 
-		img {
+		div {
 			width: 100%;
 			height: 100%;
 			object-fit: contain; // 여백있어도 전체가 보이도록
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain !important;
+			}
 		}
 	}
 
