layout 컨테츠 페이드인 모션추가

--- a/src/styles/sub/_gallery.scss
+++ b/src/styles/sub/_gallery.scss
@@ -1,6 +1,7 @@
 .gallery {
 	.galleryList {
 		width: 100%;
+		// min-height: 100vh;  //_layout.scss에 적용
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
