--- a/src/styles/common/_layout.scss
+++ b/src/styles/common/_layout.scss
@@ -15,12 +15,51 @@ main {
 			//transform 중심축 변경으로 모션 variation 가능
 			transform-origin: 200px 200px;
 		}
+
+		h1.on {
+			span {
+				opacity: 1;
+				transform: scale(1);
+				// transform: scale(1) rotate(0deg);
+			}
+		}
 	}
-	h1.on {
+
+	.slogan {
+		margin-bottom: 100px;
+		font-size: 1.2rem;
+		font-family: 'orbitron';
+		color: #888;
+		display: inline-block; // 글자 수에 맞게 테두리(?) 설정
+		position: relative;
+		overflow: hidden;
+		// border: 1px solid red;
+
 		span {
-			opacity: 1;
-			transform: scale(1);
-			// transform: scale(1) rotate(0deg);
+			opacity: 0;
+			transition-duration: 0.1s;
+			// transition-delay: 0.3s;
+			transition-delay: 0.5s;
+		}
+		.mask {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0px;
+			left: -100%;
+			background: #555;
+			transition-timing-function: linear;
+			// transition-duration: 0.6s;
+			transition-duration: 1s;
+		}
+
+		&.on {
+			span {
+				opacity: 1;
+			}
+			.mask {
+				left: 100%;
+			}
 		}
 	}
 }
