--- a/src/styles/common/_layout.scss
+++ b/src/styles/common/_layout.scss
@@ -16,7 +16,7 @@ main {
 			transform-origin: 200px 200px;
 		}
 
-		h1.on {
+		&.on {
 			span {
 				opacity: 1;
 				transform: scale(1);
@@ -24,6 +24,14 @@ main {
 			}
 		}
 	}
+
+	// h1.on {
+	// 	span {
+	// 		opacity: 1;
+	// 		transform: scale(1);
+	// 		// transform: scale(1) rotate(0deg);
+	// 	}
+	// }
 
 	.slogan {
 		margin-bottom: 100px;
