Pic컴포넌트에 style props연동 및 MotionBox컴포넌트 기능 개선

--- a/src/styles/sub/_members.scss
+++ b/src/styles/sub/_members.scss
@@ -27,10 +27,10 @@
 			}
 		}
 
-		.pic {
-			width: 50%;
-			height: 65vh;
-		}
+		// .pic {
+		// 	width: 50%;
+		// 	height: 65vh;
+		// }
 	}
 
 	.memberListBox {
