--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ $mobile: 599px;
 @import './common/footer';
 @import './common/layout';
 @import './common/modal';
+@import './common/mailForm';
 
 //main
 @import './main/home';
