--- a/src/styles/common/_mailForm.scss
+++ b/src/styles/common/_mailForm.scss
@@ -4,31 +4,44 @@
 	flex-wrap: wrap;
 	justify-content: space-between;
 	margin: 100px 0px;
+
 	.formBox {
 		width: 48%;
 		border-right: 1px solid #bbb;
 		padding-right: 8vw;
+
 		label {
 			display: block;
 			font: 500 1rem/1 'orbitron';
 			color: #333;
 			margin-bottom: 20px;
 		}
+
 		input[type='text'],
 		input[type='email'],
 		textarea {
 			border: none;
 			width: 100%;
-			border-bottom: 1px solid #444;
-			padding: 5px;
+			// border-bottom: 1px solid #444;
+			// padding: 5px;
+			border-bottom: 1px solid #888;
+			padding: 10px 5px;
 			background: transparent;
 			resize: none;
+
+			//input 요소 안쪽의 텍스트 스타일링
+			&::placeholder {
+				color: orangered;
+				font: 400 0.8rem/1.2 'raleway';
+			}
 		}
+
 		.upper {
 			width: 100%;
 			display: flex;
 			justify-content: space-between;
 			margin-bottom: 50px;
+
 			span {
 				display: block;
 				width: 48%;
@@ -38,13 +51,16 @@
 				}
 			}
 		}
+
 		.lower {
 			width: 100%;
 			margin-bottom: 10px;
 		}
+
 		.btnSet {
 			display: flex;
 			gap: 5px;
+
 			input {
 				display: inline-block;
 				background: #333;
@@ -59,15 +75,18 @@
 			}
 		}
 	}
+
 	.info {
 		width: 48%;
 		padding-left: 8vw;
+
 		h2 {
 			font: 500 2rem/1 'orbitron';
 			letter-spacing: 1px;
 			color: #444;
 			margin-bottom: 30px;
 		}
+
 		p {
 			font: 0.8rem/1.3 'arial';
 			color: #777;
