전송 이벤트 발생시 참조객체에 담아놓은 DOM의 value값을 비워주는 초기화함수 호출

--- a/src/styles/common/_mailForm.scss
+++ b/src/styles/common/_mailForm.scss
@@ -30,6 +30,7 @@
 			resize: none;
 
 			//input 요소 안쪽의 텍스트 스타일링
+			//placeholer 요소 안쪽의 텍스트 스타일링
 			&::placeholder {
 				color: orangered;
 				font: 400 0.8rem/1.2 'raleway';
