지도 영역 기본 스타일링

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@ $mobile: 599px;
 @import './common/layout';
 @import './common/modal';
 @import './common/mailForm';
+@import './common/map';
 
 //main
 @import './main/home';
