--- a/src/styles/common/_map.scss
+++ b/src/styles/common/_map.scss
@@ -1,6 +1,6 @@
 .map {
 	padding: 10vh 0px 20vh;
-	
+
 	& > h2 {
 		font: 500 2rem/1 'orbitron';
 		color: #333;
@@ -19,8 +19,10 @@
 		display: flex;
 		flex-wrap: wrap;
 		margin-top: 30px;
+		justify-content: space-between;
 
-		.branch {
+		.branch,
+		.btnToggleSet {
 			display: flex;
 			gap: 10px;
 
@@ -35,6 +37,7 @@
 				cursor: pointer;
 				opacity: 0.5;
 				transition: 0.5s;
+
 				&.on {
 					opacity: 1;
 				}
