갤러리 타입 변경 기능 추가

--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -5,5 +5,5 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	align-content: center;
-	background-color: lightcyan;
+	// background-color: lightcyan;
 }
