갤러리 변경시 타입버튼 활성화

--- a/src/styles/sub/_gallery.scss
+++ b/src/styles/sub/_gallery.scss
@@ -12,6 +12,12 @@
 			color: #fff;
 			letter-spacing: 1px;
 			cursor: pointer;
+			opacity: 0.4;
+			transition: 0.5s;
+
+			&.on {
+				opacity: 1;
+			}
 		}
 	}
 
