--- a/src/styles/sub/_gallery.scss
+++ b/src/styles/sub/_gallery.scss
@@ -1,29 +1,57 @@
 .gallery {
-	.type {
+	.controller {
+		width: 100%;
+		margin: 60px 0px;
 		display: flex;
-		margin: 30px 0px;
-		gap: 40px;
+		flex-wrap: wrap;
+		justify-content: space-between;
 
-		li {
-			padding: 10px 20px;
-			border-radius: 4px;
-			background: #444;
-			font: 400 0.7rem/1 'orbitron';
-			color: #fff;
-			letter-spacing: 1px;
-			cursor: pointer;
-			opacity: 0.4;
-			transition: 0.5s;
+		.type {
+			display: flex;
+			gap: 20px;
 
-			&.on {
-				opacity: 1;
+			li {
+				padding: 10px 20px;
+				border-radius: 4px;
+				background: #444;
+				font: 400 0.7rem/1 'orbitron';
+				color: #fff;
+				letter-spacing: 1px;
+				cursor: pointer;
+				opacity: 0.4;
+				transition: 0.5s;
+
+				&.on {
+					opacity: 1;
+				}
+			}
+		}
+
+		form {
+			display: flex;
+			gap: 5px;
+
+			input {
+				border: 1px solid #888;
+				padding: 5px 10px;
+				border-radius: 3px;
+			}
+			button {
+				border: none;
+				background: #444;
+				border-radius: 3px;
+				cursor: pointer;
+				font: 400 0.7rem/1 'orbitron';
+				color: #fff;
+				letter-spacing: 1px;
+				padding: 8px 20px;
+				position: relative;
 			}
 		}
 	}
 
 	.galleryList {
 		width: 100%;
-		// min-height: 100vh;  //_layout.scss에 적용
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
@@ -60,6 +88,7 @@
 			article {
 				width: 47%;
 				margin-bottom: 50px;
+
 				.pic {
 					height: 40vw;
 				}
@@ -67,6 +96,7 @@
 		}
 	}
 }
+
 @media screen and (max-width: $mobile) {
 	.gallery {
 		.galleryList {
