--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -1,9 +1,14 @@
 .visual {
 	width: 100%;
 	height: 100vh;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-content: center;
+	// display: flex;
+	// flex-wrap: wrap;
+	// justify-content: center;
+	// align-content: center;
 	// background-color: lightcyan;
+
+	.swiper {
+		width: 100%;
+		height: 100%;
+	}
 }
