--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -16,36 +16,44 @@
 			height: 100%;
 			padding: 20vh 0px;
 			box-sizing: border-box;
+			transform: translateX('150%');
 
 			.swiper-slide {
 				width: 100%;
 				height: 100%;
-				perspective: 700px;
+				// perspective: 700px;
 
 				.inner {
 					width: 100%;
 					height: 100%;
+					opacity: 0;
+					transform: scale(0.3);
 					transition: 0.5s;
 				}
+
+				//이전패널
+				&.swiper-slide-prev {
+					.inner {
+						opacity: 0;
+						// transform: scale(0.6) rotateY(-40deg);
+						transform: scale(1.5);
+					}
+				}
+
 				//활성화 패널
 				&.swiper-slide-active {
 					.inner {
 						opacity: 1;
-						transform: scale(1) rotateY(0deg);
+						transform: scale(1); // rotateY(0deg);
 					}
 				}
-				//이전패널
-				&.swiper-slide-prev {
-					.inner {
-						opacity: 0.4;
-						transform: scale(0.6) rotateY(-40deg);
-					}
-				}
+
 				//다음 패널
 				&.swiper-slide-next {
 					.inner {
-						opacity: 0.4;
-						transform: scale(0.6) rotateY(40deg);
+						opacity: 0.5;
+						// transform: scale(0.6) rotateY(40deg);
+						transform: scale(0.8);
 					}
 				}
 			}
