--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -10,6 +10,8 @@
 	.swiper {
 		width: 100%;
 		height: 100%;
+		position: relative;
+		left: 200px;
 
 		.swiper-wrapper {
 			width: 100%;
@@ -53,7 +55,7 @@
 					.inner {
 						opacity: 0.5;
 						// transform: scale(0.6) rotateY(40deg);
-						transform: scale(0.8);
+						transform: scale(0.6);
 					}
 				}
 			}
