--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -7,6 +7,20 @@
 	// align-content: center;
 	// background-color: lightcyan;
 
+	.textBox {
+		position: absolute;
+		width: 30%;
+		left: 5%;
+		top: 30%;
+
+		h2 {
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			font-size: 3vm;
+		}
+	}
+
 	.swiper {
 		width: 100%;
 		height: 100%;
