--- a/src/styles/common/_modal.scss
+++ b/src/styles/common/_modal.scss
@@ -16,7 +16,7 @@
 		div {
 			width: 100%;
 			height: 100%;
-			object-fit: contain; // 여백있어도 전체가 보이도록
+			object-fit: contain;
 
 			img {
 				width: 100%;
