--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -78,11 +78,16 @@
 				&.swiper-slide-next {
 					.inner {
 						opacity: 0.5;
-						// transform: scale(0.6) rotateY(40deg);
 						transform: scale(0.6);
 					}
 				}
 			}
 		}
+	}
+	.btnStart {
+		position: absolute;
+		bottom: 10vh;
+		left: 10vw;
+		z-index: 4;
 	}
 }
