--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -1,11 +1,6 @@
 .visual {
 	width: 100%;
 	height: 100vh;
-	// display: flex;
-	// flex-wrap: wrap;
-	// justify-content: center;
-	// align-content: center;
-	// background-color: lightcyan;
 
 	.textBox {
 		position: absolute;
@@ -17,7 +12,6 @@
 			position: absolute;
 			top: 0px;
 			left: 0px;
-			// font-size: 3vmax;
 			opacity: 0;
 			transform: scale(2);
 			font: 100 5vmax/1 'raleway';
@@ -36,18 +30,18 @@
 		height: 100%;
 		position: relative;
 		left: 200px;
+		z-index: 5;
 
 		.swiper-wrapper {
 			width: 100%;
 			height: 100%;
 			padding: 20vh 0px;
 			box-sizing: border-box;
-			transform: translateX('150%');
+			// transform: translateX('150%');
 
 			.swiper-slide {
 				width: 100%;
 				height: 100%;
-				// perspective: 700px;
 
 				.inner {
 					width: 100%;
@@ -61,7 +55,6 @@
 				&.swiper-slide-prev {
 					.inner {
 						opacity: 0;
-						// transform: scale(0.6) rotateY(-40deg);
 						transform: scale(1.5);
 					}
 				}
@@ -70,7 +63,7 @@
 				&.swiper-slide-active {
 					.inner {
 						opacity: 1;
-						transform: scale(1); // rotateY(0deg);
+						transform: scale(1);
 					}
 				}
 
@@ -88,7 +81,8 @@
 		position: absolute;
 		bottom: 5vh;
 		left: 30vw;
-		z-index: 3;
+		// z-index: 3;
+		z-index: 11;
 		border: none;
 		background: transparent;
 		font-size: 1.4rem;
