--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -1,6 +1,8 @@
 .visual {
 	width: 100%;
 	height: 100vh;
+	overflow: hidden;
+	position: relative; //내부 swiper로 인해 가로, 세로 스크롤 생기는 문제 해결
 
 	.textBox {
 		position: absolute;
