--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -36,11 +36,11 @@
 		}
 	}
 
-	.btnMenuToggle {
-		font-size: 1.2rem;
-		color: #333;
-		display: none;
-	}
+	// .btnMenuToggle {
+	// 	font-size: 1.2rem;
+	// 	color: #333;
+	// 	display: none;
+	// }
 }
 
 //기존 헤더 스타일을 그대로 유지하면서 main클래스만 추가되면 메인 전용 헤더스타일 추가
@@ -55,11 +55,12 @@
 
 @media screen and (max-width: $tablet) {
 	.header {
+		// padding: 30px 10vw;
 		nav {
 			display: none;
 		}
-		.btnMenuToggle {
-			display: block;
-		}
+		// .btnMenuToggle {
+		// 	display: block;
+		// }
 	}
 }
