모바일패널 메뉴,,삭제되는 이유 체크

--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -1,6 +1,7 @@
 .header {
 	width: 100%;
-	padding: 50px 15vw;
+	// padding: 50px 15vw;
+	padding: 30px 15vw;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -20,7 +21,7 @@
 		.gnb {
 			display: flex;
 			gap: 50px;
-			font: 600 0.8rem/1 'orbitron';
+			font: 600 0.8rem/1 'raleway';
 			color: #888;
 
 			li.on {
@@ -58,7 +59,8 @@
 			display: none;
 		}
 		.btnMobile {
-			display: none;
+			// display: none;  //모바일 화면 메뉴패널 안보임
+			display: block;
 		}
 	}
 }
