프로젝트에서 자주쓰이는 키 컬러를 변수로 설정해 연동

--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -9,7 +9,8 @@
 
 	h1 {
 		font: 700 1.2rem/1 'orbitron';
-		color: #333;
+		// color: #333;
+		color: var(--keyColor);
 		letter-spacing: 1px;
 	}
 
@@ -25,7 +26,8 @@
 			color: #888;
 
 			li.on {
-				color: #000;
+				// color: #000;
+				color: var(--keyColor);
 			}
 		}
 
