--- a/src/styles/common/_mailForm.scss
+++ b/src/styles/common/_mailForm.scss
@@ -28,7 +28,8 @@
 			resize: none;
 
 			&::placeholder {
-				color: orangered;
+				// color: orangered;
+				color: rgba(var(--keyRGB), 0.6);
 				font: 400 0.8rem/1.2 'raleway';
 			}
 		}
@@ -60,7 +61,8 @@
 
 			input {
 				display: inline-block;
-				background: #333;
+				// background: #333;
+				background: rgba(var(--keyRGB), 0.8);
 				border-radius: 3px;
 				padding: 10px 20px;
 				font: 300 0.6rem/1 'orbitron';
@@ -68,7 +70,8 @@
 				color: #fff;
 				cursor: pointer;
 				border: none;
-				box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+				// box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+				box-shadow: 5px 5px 10px rgba(var(--keyRGB), 0.05);
 			}
 		}
 	}
