--- a/src/styles/common/_modal.scss
+++ b/src/styles/common/_modal.scss
@@ -31,7 +31,8 @@
 		background: transparent;
 		font: 600 0.8rem/1 'orbitron';
 		letter-spacing: 1px;
-		color: #333;
+		// color: #333;
+		color: rgba(var(--keyRGB), 1);
 		position: absolute;
 		top: 4vh;
 		right: 3vw;
