--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,8 @@
 $tablet: 999px;
 $mobile: 599px;
 
+//4시 30분까지 아래와 같이 원하는 색상값을 css변수에 등록 후 각 페이지 원하는 부분에 연결
+
 :root {
 	// --keyColor: royalblue;
 	--keyRGB: 3, 58, 23;
