--- a/src/styles/sub/_gallery.scss
+++ b/src/styles/sub/_gallery.scss
@@ -1,3 +1,7 @@
+$tablet_b: 1439px;
+$gap: 70px;
+$count: 4;
+
 .gallery {
 	.controller {
 		width: 100%;
@@ -57,7 +61,14 @@
 		width: 100%;
 		display: flex;
 		flex-wrap: wrap;
-		justify-content: space-between;
+		// justify-content: space-between;
+		/*
+		갤러리 사진 4배수 맞지 않을 때 마지막줄 배열 이상해지는 오류 해결
+		*/
+		justify-content: flex-start;
+		// gap: 70px;
+		gap: $gap;
+
 		opacity: 0;
 		transform: translateY(100px);
 		// transition: 0.5s;
@@ -71,29 +82,58 @@
 			//갤러리가 보일때만 0.5초 전환모션 처리
 		}
 
-		article {
-			width: 22%;
-			margin-bottom: 80px;
+		//미션 - 아래 코드의 자주변경 될 만한 부분들을 관리하기 편하도록 변수로 추출 후 연동
 
+		article {
+			// width: 22%;
+			// width: calc((100% - 70px * 3) / 4);
+			width: calc((100% - $gap * 3) / 4);
+			width: calc((100% - $gap * ($count - 1)) / $count);
+			/* scss에서 직접 계산할 수 있게 설정. calc()
+			사이간격을 제외한 가로로 배치될 박스의 총합 = 전체 넓이값 - (사이간격 * 간격갯수)
+			위에서 연산된 실제 박스 너비 총합해서 / 가로로 배치할 박스 갯수
+			 = {전체 넓이값 - (사이간격 * 간격갯수)} / 4
+			*/
+			// margin-bottom: 80px;
 			.pic {
 				width: 100%;
 				height: 20vw;
-				margin-bottom: 20px;
+				// margin-bottom: 20px;
 			}
-			h3 {
-				font: 400 1rem/1.2 'raleway';
-				color: #888;
-				margin-bottom: 20px;
+			// h3 {
+			// 	font: 400 1rem/1.2 'raleway';
+			// 	color: #888;
+			// 	margin-bottom: 20px;
+			// }
+		}
+	}
+}
+
+@media screen and (max-width: $tablet_b) {
+	$count: 3;
+	.gallery {
+		.galleryList {
+			article {
+				// width: calc((100% - 70px * 2) / 3);
+				// width: calc((100% - $gap * 2) / 3);
+				width: calc((100% - $gap * ($count - 1)) / $count);
+				.pic {
+					height: 30vw;
+				}
 			}
 		}
 	}
 }
 
 @media screen and (max-width: $tablet) {
+	$count: 2;
 	.gallery {
 		.galleryList {
 			article {
-				width: 47%;
+				// width: 47%;
+				// width: calc((100% - 70px * 1) / 2);
+				// width: calc((100% - $gap * 1) / 2);
+				width: calc((100% - $gap * ($count - 1)) / $count);
 				margin-bottom: 50px;
 
 				.pic {
@@ -105,10 +145,14 @@
 }
 
 @media screen and (max-width: $mobile) {
+	$count: 1;
 	.gallery {
 		.galleryList {
 			article {
-				width: 100%;
+				// width: 100%;
+				// width: calc((100% - 70px * 0) / 1);
+				// width: calc((100% - $gap * 0) / 1);
+				width: calc((100% - $gap * ($count - 1)) / $count);
 			}
 		}
 	}
