--- a/src/styles/sub/_gallery.scss
+++ b/src/styles/sub/_gallery.scss
@@ -82,7 +82,8 @@ $count: 4;
 			//갤러리가 보일때만 0.5초 전환모션 처리
 		}
 
-		//미션 - 아래 코드의 자주변경 될 만한 부분들을 관리하기 편하도록 변수로 추출 후 연동
+		//미션1 - 아래 코드의 자주변경 될 만한 부분들을 관리하기 편하도록 변수로 추출 후 연동
+		//미션2 - 아래 코드에서 미디어쿼리 구간마다 사이간격 변수로 변경 처리
 
 		article {
 			// width: 22%;
@@ -111,12 +112,17 @@ $count: 4;
 
 @media screen and (max-width: $tablet_b) {
 	$count: 3;
+	$gap: 60px;
+
 	.gallery {
 		.galleryList {
+			gap: $gap;
+
 			article {
 				// width: calc((100% - 70px * 2) / 3);
 				// width: calc((100% - $gap * 2) / 3);
 				width: calc((100% - $gap * ($count - 1)) / $count);
+
 				.pic {
 					height: 30vw;
 				}
@@ -127,14 +133,18 @@ $count: 4;
 
 @media screen and (max-width: $tablet) {
 	$count: 2;
+	$gap: 40px;
+
 	.gallery {
 		.galleryList {
+			gap: $gap;
+
 			article {
 				// width: 47%;
 				// width: calc((100% - 70px * 1) / 2);
 				// width: calc((100% - $gap * 1) / 2);
 				width: calc((100% - $gap * ($count - 1)) / $count);
-				margin-bottom: 50px;
+				// margin-bottom: 50px;
 
 				.pic {
 					height: 40vw;
@@ -146,8 +156,11 @@ $count: 4;
 
 @media screen and (max-width: $mobile) {
 	$count: 1;
+	$gap: 30px;
+
 	.gallery {
 		.galleryList {
+			gap: $gap;
 			article {
 				// width: 100%;
 				// width: calc((100% - 70px * 0) / 1);
