--- a/src/styles/sub/_members.scss
+++ b/src/styles/sub/_members.scss
@@ -113,10 +113,7 @@
 			.txt {
 				width: 100%;
 				padding-bottom: 30px;
-
-				h2 {
-					font-size: 1.8rem;
-				}
+				justify-content: flex-start;
 			}
 
 			.pic {
