--- a/src/styles/sub/_members.scss
+++ b/src/styles/sub/_members.scss
@@ -114,11 +114,23 @@
 				width: 100%;
 				padding-bottom: 30px;
 				justify-content: flex-start;
+
+				& > * {
+					text-align: left !important;
+				}
+
+				h2 {
+					font-size: 1.8rem;
+				}
 			}
 
-			.pic {
-				width: 100%;
-				height: 40vh;
+			// 	.pic {
+			// 		width: 100%;
+			// 		height: 40vh;
+			// 	}
+			.picWrapper {
+				width: 100% !important;
+				height: 45vh !important;
 			}
 		}
 
@@ -142,8 +154,11 @@
 	.members {
 		.ceoBox {
 			margin-bottom: 80px;
-			.pic {
-				height: 30vh;
+			// .pic {
+			// 	height: 30vh;
+			// }
+			.picWrapper {
+				height: 30vh !important;
 			}
 		}
 		.memberListBox {
