--- a/src/styles/common/_mailForm.scss
+++ b/src/styles/common/_mailForm.scss
@@ -93,3 +93,18 @@
 		}
 	}
 }
+
+@media screen and (max-width: $tablet) {
+	.mailForm {
+		.formBox {
+			width: 100%;
+			padding-right: 0px;
+			margin-bottom: 80px;
+			border-right: none;
+		}
+		.info {
+			width: 100%;
+			padding-left: 0px;
+		}
+	}
+}
