--- a/src/styles/sub/_gallery.scss
+++ b/src/styles/sub/_gallery.scss
@@ -13,6 +13,7 @@ $count: 4;
 		.type {
 			display: flex;
 			gap: 20px;
+			margin-bottom: 20px;
 
 			li {
 				padding: 10px 20px;
@@ -35,6 +36,7 @@ $count: 4;
 		form {
 			display: flex;
 			gap: 5px;
+			margin-bottom: 20px;
 
 			input {
 				border: 1px solid #888;
@@ -88,7 +90,7 @@ $count: 4;
 		article {
 			// width: 22%;
 			// width: calc((100% - 70px * 3) / 4);
-			width: calc((100% - $gap * 3) / 4);
+			// width: calc((100% - $gap * 3) / 4);
 			width: calc((100% - $gap * ($count - 1)) / $count);
 			/* scss에서 직접 계산할 수 있게 설정. calc()
 			사이간격을 제외한 가로로 배치될 박스의 총합 = 전체 넓이값 - (사이간격 * 간격갯수)
@@ -159,8 +161,29 @@ $count: 4;
 	$gap: 30px;
 
 	.gallery {
+		.controller {
+			form {
+				width: 100%;
+				display: flex;
+				flex-wrap: wrap;
+
+				input {
+					width: 100%;
+					margin-bottom: 5px;
+				}
+
+				button {
+					width: 100%;
+					height: 27px;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
+			}
+		}
 		.galleryList {
 			gap: $gap;
+
 			article {
 				// width: 100%;
 				// width: calc((100% - 70px * 0) / 1);
