--- a/src/styles/main/_visual.scss
+++ b/src/styles/main/_visual.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;
-	position: relative; //내부 swiper로 인해 가로, 세로 스크롤 생기는 문제 해결
+	position: relative;
 
 	.textBox {
 		position: absolute;
@@ -87,7 +87,6 @@
 		border: none;
 		background: transparent;
 		font-size: 1.4rem;
-		// color: #444;
 		color: rgba(var(--keyRGB), 0.7);
 		cursor: pointer;
 	}
@@ -102,7 +101,6 @@
 
 		.swiper-pagination-current {
 			font-size: 5rem;
-			// color: #111;
 			color: rgba(var(--keyRGB), 0.8);
 		}
 	}
